--- a/mars-cli-template-vue3/package.json
+++ b/mars-cli-template-vue3/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "mars-cli-template-vue3",
+  "name": "mars-cli-template-vue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC"
