--- a/mars-cli-template-vue-lego-component/template/package.json
+++ b/mars-cli-template-vue-lego-component/template/package.json
@@ -5,15 +5,12 @@
   "main": "dist/lego-components.umd.js",
   "module": "dist/lego-components.esm.js",
   "types": "dist/index.d.ts",
-  "description": "Lego Vue3 components library",
+  "description": "<%= description %>",
   "license": "MIT",
   "keywords": [
     "Component",
     "UI",
     "Vue"
-  ],
-  "files": [
-    "dist"
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
