--- a/mars-cli-template-vue3/package.json
+++ b/mars-cli-template-vue3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mars-cli-template-vue",
+  "name": "mars-cli-template-vue3",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
