--- a/mars-cli-template-custom-vue3/package.json
+++ b/mars-cli-template-custom-vue3/package.json
@@ -5,5 +5,11 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "fs-extra": "^10.0.0",
+    "glob": "^7.1.7",
+    "inquirer": "^8.1.2"
+  }
 }
